# RDK_X5_surveying_car

./: README_cn.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/lkh_tsp_solver/: lkh_tsp
devel/lib/multi_map_server/: multi_map_visualization
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: active_perception.pc  bspline.pc  bspline_opt.pc  cmake_utils.pc  exploration_manager.pc  lkh_tsp_solver.pc  local_sensing_node.pc  map_generator.pc  multi_map_server.pc  odom_visualization.pc  path_searching.pc  plan_env.pc  plan_manage.pc  poly_traj.pc  poscmd_2_odom.pc  pose_utils.pc  quadrotor_msgs.pc  ros_2dnav_learning.pc  ros_2dnav_practice.pc  ros_base_learning.pc  rviz_plugins.pc  so3_control.pc  so3_disturbance_generator.pc  so3_quadrotor_simulator.pc  traj_utils.pc  uav_utils.pc  urdf_learning.pc  waypoint_generator.pc
devel/lib/poscmd_2_odom/: poscmd_2_odom
devel/lib/ros_2dnav_learning/: AutonomousExploration  Return
devel/lib/ros_base_learning/: listener  middle  talker
devel/lib/so3_disturbance_generator/: so3_disturbance_generator
devel/lib/waypoint_generator/: waypoint_generator
src/: CMakeLists.txt
src/ros_2dnav_learning/: CMakeLists.txt  package.xml
src/ros_2dnav_practice/: CMakeLists.txt
src/ros_base_learning/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
src/ros_base_learning/launch/: turtlesim.launch
src/ros_base_learning/msg/: Num.msg
src/ros_base_learning/src/: listener.cpp  middle.cpp  talker.cpp
src/urdf_learning/: CMakeLists.txt
(+67 files in other folders)
